--- a/taskuraha-client/.eslintrc.json
+++ b/taskuraha-client/.eslintrc.json
@@ -37,6 +37,12 @@
             "error",
             "always"
         ],
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "max-len": [
+            "error",
+            {
+                "code": 80
+            }
+        ]
     }
 }
