--- a/ilmoitustaulu-server/ilmoitustaulu-server/appsettings.json
+++ b/ilmoitustaulu-server/ilmoitustaulu-server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "db": "Host=127.0.0.1; Port=5432; Database=ilmoitustaulu_db; Username=postgres; Password=password"
+  },
   "AllowedHosts": "*"
 }
