--- a/ilmoitustaulu-server/ilmoitustaulu-server/appsettings.json
+++ b/ilmoitustaulu-server/ilmoitustaulu-server/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "db": "Host=127.0.0.1; Port=5432; Database=ilmoitustaulu_db; Username=postgres; Password=password"
+    "DefaultConnection": "Host=127.0.0.1; Port=5432;"
   },
   "AllowedHosts": "*"
 }
