--- a/ilmoitustaulu-client/package.json
+++ b/ilmoitustaulu-client/package.json
@@ -2,6 +2,7 @@
   "name": "ilmoitustaulu-client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5134",
   "dependencies": {
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
@@ -11,6 +12,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "@types/uuid": "^8.3.4",
+    "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
